--- a/src/plugins/input-configurator/public/bower.json
+++ b/src/plugins/input-configurator/public/bower.json
@@ -18,7 +18,7 @@
     "iron-list": "polymerelements/iron-list#^1.3.1"
   },
   "resolutions": {
-    "polymer": "1.4.0",
+    "polymer": "^1.1.0",
     "webcomponentsjs": "^0.7.20"
   }
 }
