--- a/src/plugins/geomuxp/package.json
+++ b/src/plugins/geomuxp/package.json
@@ -9,6 +9,7 @@
   "author": "Brian Adams <brian@babastik.com>",
   "license": "MIT",
   "dependencies": {
+    "socket.io-client": "^1.4.6",
     "geo-video-simulator": "https://github.com/OpenROV-Dev/geo-video-simulator.git"
   },
   "optionalDependencies": {
