Offline mode and updates to internet stream

--- a/src/plugins/translations.en-US/orov-appletswitcher.json
+++ b/src/plugins/translations.en-US/orov-appletswitcher.json
@@ -11,5 +11,7 @@
   "vr": "vr",
   "diagnostics": "diagnostics",
   "diveprofile": "diveprofile",
-  "RemoteAccess": "RemoteAccess"
+  "RemoteAccess": "RemoteAccess",
+  "comms": "comms",
+  "misctrl": "misctrl"
 }
