--- a/src/plugins/internet-stream/public/bower.json
+++ b/src/plugins/internet-stream/public/bower.json
@@ -19,6 +19,7 @@
     "paper-card": "PolymerElements/paper-card#^1.1.1"
   },
   "resolutions": {
-    "webcomponentsjs": "^0.6.0"
+    "webcomponentsjs": "^0.7.20",
+    "polymer": "^1.0.0"
   }
 }
