--- a/src/system-plugins/ui-manager/public/bower.json
+++ b/src/system-plugins/ui-manager/public/bower.json
@@ -18,8 +18,8 @@
     "paper-item": "PolymerElements/paper-item#^1.2.1",
     "iron-icon": "PolymerElements/iron-icon#^1.0.8",
     "polymer-font-awesome-icons": "philya/font-awesome-polymer-icons#^4.2.0-b2",
-    "carbon-route": "PolymerElements/carbon-route#^0.8.4",
-    "platinum-sw": "PolymerElements/platinum-sw#^1.3.0"
+    "platinum-sw": "PolymerElements/platinum-sw#^1.3.0",
+    "app-route": "PolymerElements/app-route#^0.9.1"
   },
   "resolutions": {
     "polymer": "1.4.0",
