--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,7 @@
 			],
 			"env": {
 				"NODE_ENV": "development",
+				"DEV_MODE": "true",
 				"USE_MOCK": "true",
 				"HARDWARE_MOCK": "true",
 				"GEO_MOCK": "true",
