Point geomuxp plugin dependencies to master branches for video servers

--- a/src/plugins/geomuxp/package.json
+++ b/src/plugins/geomuxp/package.json
@@ -10,9 +10,9 @@
   "license": "MIT",
   "dependencies": {
     "socket.io-client": "^1.4.6",
-    "geo-video-simulator": "https://github.com/OpenROV-Dev/geo-video-simulator.git#feat_geomuxpp"
+    "geo-video-simulator": "https://github.com/OpenROV-Dev/geo-video-simulator.git"
   },
   "optionalDependencies": {
-    "geo-video-server": "https://github.com/OpenROV-Dev/geo-video-server.git#feat_geomuxpp"
+    "geo-video-server": "https://github.com/OpenROV-Dev/geo-video-server.git"
   }
 }
