--- a/src/plugins/geomuxp/public/bower.json
+++ b/src/plugins/geomuxp/public/bower.json
@@ -18,5 +18,9 @@
   ],
   "dependencies": {
     "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.0.0"
+  },
+  "resolutions": {
+    "polymer": "^1.2.0",
+    "webcomponentsjs": "^0.7.20"
   }
 }
