re-enable zeroing of depth

--- a/src/static/bower.json
+++ b/src/static/bower.json
@@ -9,7 +9,7 @@
     "webcomponentsjs": "^0.7.22"
   },
   "resolutions": {
-    "webcomponentsjs": "^0.7.20",
+    "webcomponentsjs": "0.7.22",
     "polymer": "^1.5.0"
   }
 }
