--- a/src/plugins/input-configurator/public/bower.json
+++ b/src/plugins/input-configurator/public/bower.json
@@ -15,10 +15,11 @@
     "tests"
   ],
   "dependencies": {
-    "iron-list": "polymerelements/iron-list#^1.3.1"
+    "iron-list": "polymerelements/iron-list#^1.3.1",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.2.1"
   },
   "resolutions": {
-    "polymer": "^1.1.0",
+    "polymer": "^1.2.1",
     "webcomponentsjs": "^0.7.20"
   }
 }
