Updated gitignore, added bluebird package, added mock dir in cockpit

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "serve-index": "^1.7.3",
     "socket.io": "~1.4.5",
     "sync": "",
-    "systemd": "git://github.com/plietar/node-systemd.git"
+    "systemd": "git://github.com/plietar/node-systemd.git",
+    "bluebird": "^3.4.1"
   },
   "bundleDependencies": [
     "express",
