Added ncp package

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "morgan": "^1.6.1",
     "multer": "^1.1.0",
     "nconf": "",
+    "ncp": "^2.0.0",
     "object-assign": "^4.0.1",
     "optimist": "",
     "os-utils": "",
