--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,8 @@
 			],
 			"env": {
 				"NODE_ENV": "development",
+				"PLATFORM": "mock",
+				"BOARD":	"mock3000",
 				"DEV_MODE": "true",
 				"USE_MOCK": "true",
 				"CPU_MOCK": "123MOCK",
