--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "socket.io": "~1.4.5",
     "sync": "",
     "systemd": "git://github.com/plietar/node-systemd.git",
-    "bluebird": "^3.4.1"
+    "bluebird": "^3.4.1",
+    "fs-extra": ""
   },
   "bundleDependencies": [
     "express",
