Figuring out bottleneck in sending video. Currently using binaryJS and the video frame comes as a base64 encoded string

--- a/src/plugins/video/public/bower.json
+++ b/src/plugins/video/public/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "mjpeg-video-webcomponents": "~2.0.1",
+    "binaryjs": "~0.2.1",
     "packet-video": "https://github.com/OpenROV-atoms/packet-video.git"
   },
   "resolutions": {
