--- a/src/system-plugins/platform-manager/platforms/mock/install/manifest.json
+++ b/src/system-plugins/platform-manager/platforms/mock/install/manifest.json
@@ -1,3 +1,26 @@
 {
-	"files/test.txt": "files/test2.txt"
+	"files":
+	[
+		{ "src": "test.txt", "dest": "/opt/openrov/system/etc" }
+	],
+	
+	"preinstall": 
+	[ 
+		{ "name": "pre-install.sh", "type": "bash" }
+	],
+	
+	"postinstall":
+	[
+		{ "name": "post-install.sh", "type": "bash" }
+	],
+	
+	"preuninstall":
+	[
+		{ "name": "pre-uninstall.sh", "type": "bash" }
+	],
+	
+	"postuninstall":
+	[
+		{ "name": "post-uninstall.sh", "type": "bash" }
+	]
 }
