--- a/src/system-plugins/platform-manager/platforms/raspberrypi/install/manifest.json
+++ b/src/system-plugins/platform-manager/platforms/raspberrypi/install/manifest.json
@@ -3,12 +3,14 @@
 	[
 		{ "src": "openocd.cfg", 	"dest": "/opt/openrov/system/etc" },
 		{ "src": "rc.local", 		"dest": "/opt/openrov/system/scripts" },
-		{ "src": "nginx.location", 	"dest": "/opt/openrov/system/scripts" }
+		{ "src": "nginx.location", 	"dest": "/opt/openrov/system/scripts" },
+		{ "src": "dt-overlays/openrov-eeprom.dtbo", "dest": "/boot/overlays" }
 	],
 	
 	"preinstall": 
 	[ 
-		{ "name": "pre-install.sh", "type": "bash" }
+		{ "name": "pre-install.sh", "type": "bash" },
+		{ "name": "compile-dt-overlays.sh", "type": "bash" }
 	],
 	
 	"postinstall":
