--- a/src/plugins/blackbox/public/bower.json
+++ b/src/plugins/blackbox/public/bower.json
@@ -22,7 +22,8 @@
     "paper-menu": "PolymerElements/paper-menu#^1.2.2",
     "paper-item": "PolymerElements/paper-item#^1.2.0",
     "paper-listbox": "PolymerElements/paper-listbox#^1.1.2",
-    "paper-card": "PolymerElements/paper-card#^1.1.1"
+    "paper-card": "PolymerElements/paper-card#^1.1.1",
+    "paper-progress": "PolymerElements/paper-progress#^1.0.9"
   },
   "resolutions": {
     "polymer": "^1.2.4",
