--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,7 @@
 				"USE_MOCK": "true",
 				"HARDWARE_MOCK": "true",
 				"GEO_MOCK": "true",
+				"port": 8080,
 				"DEBUG": "hardware, physical-interface",
 				"configfile": "/tmp/rovconfig.json",
 				"plugins__ui-manager__selectedUI": "new-ui",
