Adding scripts to install and uninstall the cb25overlay on the BBB

--- a/src/system-plugins/platform-manager/platforms/beaglebone/boards/2x/install/manifest.json
+++ b/src/system-plugins/platform-manager/platforms/beaglebone/boards/2x/install/manifest.json
@@ -14,12 +14,12 @@
 	
 	"postinstall":
 	[
-		
+		{ "name": "install-orov-cb25-overlay.py", "type": "python" }
 	],
 	
 	"preuninstall":
 	[
-		
+		{ "name": "uninstall-orov-cb25-overlay.py", "type": "python" }
 	],
 	
 	"postuninstall":
