Updated to use the build_tag python scripts now located in system

--- a/src/system-plugins/platform-manager/platforms/beaglebone/boards/2x/install/manifest.json
+++ b/src/system-plugins/platform-manager/platforms/beaglebone/boards/2x/install/manifest.json
@@ -14,12 +14,12 @@
 	
 	"postinstall":
 	[
-		{ "name": "install-orov-cb25-overlay.py", "type": "python" }
+		{ "name": "install-orov-cb25-overlay.sh", "type": "bash" }
 	],
 	
 	"preuninstall":
 	[
-		{ "name": "uninstall-orov-cb25-overlay.py", "type": "python" }
+		{ "name": "uninstall-orov-cb25-overlay.sh", "type": "bash" }
 	],
 	
 	"postuninstall":
