--- a/src/plugins/video/package.json
+++ b/src/plugins/video/package.json
@@ -10,6 +10,7 @@
   "author": "OpenROV Inc",
   "license": "ISC",
   "dependencies": {
-    "socket.io-client": "^1.4.8"
+    "socket.io-client": "^1.4.8",
+    "socket.io-stream": "^0.9.0"
   }
 }
