--- a/src/system-plugins/platform-manager/platforms/beaglebone/install/manifest.json
+++ b/src/system-plugins/platform-manager/platforms/beaglebone/install/manifest.json
@@ -4,8 +4,7 @@
 		{ "src": "2xBoardInfo.json", 	"dest": "/opt/openrov/system/etc" },
 		{ "src": "addswapfile.sh", 		"dest": "/opt/openrov/system/scripts" },
 		{ "src": "knight-rider.js", 	"dest": "/opt/openrov/system/scripts" },
-		{ "src": "rc.local", 			"dest": "/opt/openrov/system/scripts" },
-		{ "src": "nginx.location", 		"dest": "/opt/openrov/system/etc" }
+		{ "src": "rc.local", 			"dest": "/opt/openrov/system/scripts" }
 	],
 	
 	"preinstall": 
