--- a/src/plugins/new-ui/public/bower.json
+++ b/src/plugins/new-ui/public/bower.json
@@ -22,6 +22,7 @@
     "iron-media-query": "PolymerElements/iron-media-query#^1.0.8"
   },
   "resolutions": {
-    "webcomponentsjs": "^0.6.0"
+    "webcomponentsjs": "^0.7.20",
+    "polymer": "^1.0.0"
   }
 }
