--- a/src/static/webcomponents/orov-behaviors/bower.json
+++ b/src/static/webcomponents/orov-behaviors/bower.json
@@ -15,13 +15,13 @@
   ],
   "devDependencies": {
     "eventemitter2": "~1.0.0",
-    "web-component-tester": "~4.2.2"
+    "web-component-tester": "~4.3.1"
   },
   "dependencies": {
-    "polymer": "~1.4.0"
+    "polymer": "~1.6.1"
   },
   "resolutions": {
-    "polymer": "~1.4.0",
-    "webcomponentsjs": "^0.7.20"
+    "polymer": "~1.6.1",
+    "webcomponentsjs": "0.7.22"
   }
 }
