Fixed issue with app state in bower

--- a/src/plugins/geomuxp/public/bower.json
+++ b/src/plugins/geomuxp/public/bower.json
@@ -17,9 +17,7 @@
     "tests"
   ],
   "dependencies": {
-    "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.0.0"
-  },
-  "resolutions": {
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.0.0",
     "polymer": "^1.2.0",
     "webcomponentsjs": "^0.7.20"
   }
