--- a/src/plugins/internet-stream/public/bower.json
+++ b/src/plugins/internet-stream/public/bower.json
@@ -16,10 +16,8 @@
   ],
   "dependencies": {
     "visionmedia-debug": "visionmedia/debug#~2.2.0",
-    "paper-card": "PolymerElements/paper-card#^1.1.1"
-  },
-  "resolutions": {
-    "webcomponentsjs": "^0.7.20",
-    "polymer": "^1.0.0"
+    "paper-card": "PolymerElements/paper-card#^1.1.1",
+    "polymer": "^1.2.0",
+    "webcomponentsjs": "^0.7.20"    
   }
 }
