--- a/src/plugins/tankcontrol/public/bower.json
+++ b/src/plugins/tankcontrol/public/bower.json
@@ -15,10 +15,8 @@
     "tests"
   ],
   "dependencies": {
-    "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.2.0"
-  },
-  "resolutions": {
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.2.0",
     "polymer": "^1.2.0",
-    "webcomponentsjs": "^0.7.20"
+    "webcomponentsjs": "^0.7.20"    
   }
 }
