--- a/src/plugins/telemetry/public/bower.json
+++ b/src/plugins/telemetry/public/bower.json
@@ -14,10 +14,8 @@
     "tests"
   ],
   "dependencies": {
-    "grapp-graph-epoch": "~0.1.2"
-  },
-  "resolutions": {
-    "polymer": "^1.0.0",
-    "webcomponentsjs": "^0.7.20"
+    "grapp-graph-epoch": "~0.1.2",
+    "polymer": "^1.2.0",
+    "webcomponentsjs": "^0.7.20"    
   }
 }
