--- a/src/plugins/video/public/bower.json
+++ b/src/plugins/video/public/bower.json
@@ -15,10 +15,8 @@
   ],
   "dependencies": {
     "mjpeg-video-webcomponents": "~2.0.1",
-    "packet-video": "https://github.com/OpenROV-atoms/packet-video.git"
-  },
-  "resolutions": {
-    "webcomponentsjs": "^0.7.20",
-    "polymer": "^1.0.0"
+    "packet-video": "https://github.com/OpenROV-atoms/packet-video.git",
+    "polymer": "^1.2.0",
+    "webcomponentsjs": "^0.7.20"    
   }
 }
