--- a/src/plugins/headsup-menu/public/bower.json
+++ b/src/plugins/headsup-menu/public/bower.json
@@ -13,8 +13,8 @@
     "test",
     "tests"
   ],
-  "dependencies": {},
-  "resolutions": {
-    "webcomponentsjs": "^0.6.0"
+  "dependencies": {
+    "polymer": "^1.2.0",
+    "webcomponentsjs": "^0.7.20"    
   }
 }
