--- a/src/plugins/peer-view/public/bower.json
+++ b/src/plugins/peer-view/public/bower.json
@@ -17,10 +17,8 @@
   "dependencies": {
     "paper-tooltip": "PolymerElements/paper-tooltip#^1.1.2",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1",
-    "paper-toggle-button": "polymerElements/paper-toggle-button#^1.1.2"
-  },
-  "resolutions": {
-    "polymer": "^1.2.1",
-    "webcomponentsjs": "^0.7.20"
+    "paper-toggle-button": "polymerElements/paper-toggle-button#^1.1.2",
+    "polymer": "^1.2.0",
+    "webcomponentsjs": "^0.7.20"    
   }
 }
