--- a/src/plugins/thrusters2x1/public/bower.json
+++ b/src/plugins/thrusters2x1/public/bower.json
@@ -15,6 +15,8 @@
     "tests"
   ],
   "dependencies": {
-    "paper-slider": "PolymerElements/paper-slider#^1.0.11"
+    "paper-slider": "PolymerElements/paper-slider#^1.0.11",
+    "polymer": "^1.2.0",
+    "webcomponentsjs": "^0.7.20"    
   }
 }
