--- a/src/static/webcomponents/orov-behaviors/bower.json
+++ b/src/static/webcomponents/orov-behaviors/bower.json
@@ -18,10 +18,7 @@
     "web-component-tester": "~4.3.1"
   },
   "dependencies": {
-    "polymer": "~1.6.1"
-  },
-  "resolutions": {
     "polymer": "~1.6.1",
-    "webcomponentsjs": "0.7.22"
+    "webcomponentsjs": "^0.7.20"    
   }
 }
