--- a/src/system-plugins/cloud-profile/public/bower.json
+++ b/src/system-plugins/cloud-profile/public/bower.json
@@ -19,10 +19,8 @@
     "paper-menu-button": "PolymerElements/paper-menu-button#^1.1.0",
     "paper-menu": "PolymerElements/paper-menu#^1.2.2",
     "paper-item": "PolymerElements/paper-item#^1.2.1",
-    "jwt-decode": "^2.0.1"
-  },
-  "resolutions": {
-    "polymer": "^1.5.0",
-    "webcomponentsjs": "^0.7.20"
+    "jwt-decode": "^2.0.1",
+    "polymer": "^1.2.4",
+    "webcomponentsjs": "^0.7.20"    
   }
 }
