--- a/src/system-plugins/software-update-alert/public/bower.json
+++ b/src/system-plugins/software-update-alert/public/bower.json
@@ -15,10 +15,8 @@
     "tests"
   ],
   "dependencies": {
-    "iron-ajax": "^1.4.3"
-  },
-  "resolutions": {
+    "iron-ajax": "^1.4.3",
     "polymer": "^1.0.0",
-    "webcomponentsjs": "^0.7.20"
+    "webcomponentsjs": "^0.7.20"    
   }
 }
