--- a/src/system-plugins/settings-manager/public/bower.json
+++ b/src/system-plugins/settings-manager/public/bower.json
@@ -19,5 +19,8 @@
     "paper-toast": "PolymerElements/paper-toast#^1.2.2",
     "webcomponentsjs": "^0.7.20",
     "polymer": "^1.5.0"
+  },
+  "resolutions": {
+    "polymer": "^1.1.0"
   }
 }
