--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "binary-parser": "1.1.5",
     "bluebird": "^3.4.1",
+    "bluebird-retry": "git+https://github.com/demmer/bluebird-retry.git",
     "body-parser": "^1.14.2",
     "bower": "^1.7.9",
     "child-process-promise": "",
@@ -27,6 +28,7 @@
     "findit": "^2.0.0",
     "forever-monitor": "",
     "fs-extra": "",
+    "javascript-state-machine": "",
     "jquery-file-upload-middleware": "",
     "json-schema-defaults": "^0.2.0",
     "lazy": ">= 1.0.11",
