--- a/src/static/bower.json
+++ b/src/static/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "static_openrov",
   "dependencies": {
+    "font-roboto": "PolymerElements/font-roboto-local#^1.0.0",   
     "fpsmeter": "~0.3.1",
     "i18next": "~1.11.0",
     "jquery": "3.1",
