single dir bower install not working as intended

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "./node_modules/grunt-cli/bin/grunt test",
-    "install": "PACKDIR=$(pwd)/src/static/bower_components node install_lib/bower_install_all.js && node install_lib/npm_install_all.js"
+    "install": "node install_lib/bower_install_all.js && node install_lib/npm_install_all.js"
   },
   "dependencies": {
     "binary-parser": "1.1.5",
