--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,8 +21,8 @@
 				"DEV_MODE": "true",
 				"USE_MOCK": "true",
 				"CPU_MOCK": "123MOCK",
-				"GEO_MOCK": "false",
-				"MJPG_MOCK": "true",
+				"GEO_MOCK": "true",
+				"MJPG_MOCK": "false",
 				"DEBUG": "bridge, mcu, cpu",
 				"port": 8080,
 				"configfile": "/tmp/rovconfig.json",
