--- a/src/plugins/new-ui/public/bower.json
+++ b/src/plugins/new-ui/public/bower.json
@@ -21,6 +21,7 @@
     "jquery": "~3.1.0",
     "iron-media-query": "PolymerElements/iron-media-query#^1.0.8",
     "polymer": "^1.2.0",
+    "prefixfree": "gh-pages",
     "webcomponentsjs": "^0.7.20"    
   }
 }
