--- a/src/system-plugins/platform-manager/platforms/beaglebone/boards/2x/install/manifest.json
+++ b/src/system-plugins/platform-manager/platforms/beaglebone/boards/2x/install/manifest.json
@@ -1,7 +1,10 @@
 {
 	"files":
 	[
-		{ "src": "dt-overlays/OROV-CB25-00A0.dtbo", 	"dest": "/lib/firmware" }
+		{ "src": "dt-overlays/OROV-CB25-00A0.dtbo", 	"dest": "/lib/firmware" },
+		{ "src": "BuildFirmware.js", 					"dest": "/opt/openrov/system/scripts" },
+		{ "src": "FlashFirmware.js", 					"dest": "/opt/openrov/system/scripts" },	
+		{ "src": "FlashESCs.js", 						"dest": "/opt/openrov/system/scripts" }
 	],
 	
 	"preinstall": 
