--- a/src/system-plugins/software-update-alert/public/bower.json
+++ b/src/system-plugins/software-update-alert/public/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "iron-ajax": "^1.4.3",
     "polymer": "^1.0.0",
-    "webcomponentsjs": "^0.7.20"    
+    "webcomponentsjs": "^0.7.20",
+    "paper-button": "PolymerElements/paper-button#^1.0.13"
   }
 }
