Feature/updateprogress ui (#146)
* Working firmware update notificaions

* Added notification plugin

* Seed the notification log if development

* tweaked update screen ui

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,11 +23,12 @@
 				"CPU_MOCK": "123MOCK",
 				"GEO_MOCK": "true",
 				"MJPG_MOCK": "false",
-				"DEBUG": "bridge, mcu, cpu",
+				"DEBUG": "bridge, mcu, cpu, *:Notifications",
 				"port": 8080,
 				"configfile": "/tmp/rovconfig.json",
 				"plugins__ui-manager__selectedUI": "new-ui",
-				"pluginsDownloadDirectory": "/tmp/plugins"
+				"pluginsDownloadDirectory": "/tmp/plugins",
+				"DATADIR": "/tmp"
 			},
             "console": "internalConsole",			
 			"sourceMaps": false,
