--- a/src/plugins/input-configurator/public/bower.json
+++ b/src/plugins/input-configurator/public/bower.json
@@ -18,7 +18,8 @@
     "iron-list": "polymerelements/iron-list#^1.3.1",
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.2.1",
     "paper-spinner": "PolymerElements/paper-spinner#^1.2.0",
-    "paper-checkbox": "PolymerElements/paper-checkbox#^1.4.0"
+    "paper-checkbox": "PolymerElements/paper-checkbox#^1.4.0",
+    "paper-menu": "PolymerElements/paper-menu#^1.2"
   },
   "resolutions": {
     "polymer": "^1.2.1",
