--- a/src/plugins/input-configurator/public/bower.json
+++ b/src/plugins/input-configurator/public/bower.json
@@ -20,7 +20,8 @@
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.2.1",
     "paper-spinner": "PolymerElements/paper-spinner#^1.2.0",
     "paper-checkbox": "PolymerElements/paper-checkbox#^1.4.0",
-    "paper-menu": "PolymerElements/paper-menu#^1.2"
+    "paper-menu": "PolymerElements/paper-menu#^1.2",
+    "paper-tabs": "PolymerElements/paper-tabs#^1.6.2"
   },
   "resolutions": {
     "polymer": "^1.2.1",
