System now caches list of plugins after first load

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,6 +28,7 @@
 				"configfile": "/tmp/rovconfig.json",
 				"plugins__ui-manager__selectedUI": "new-ui",
 				"pluginsDownloadDirectory": "/tmp/plugins",
+				"cacheDirectory": "/tmp/cache",
 				"DATADIR": "/tmp"
 			},
             "console": "internalConsole",			
