--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,7 +30,7 @@
 				"pluginsDownloadDirectory": "/tmp/plugins",
 				"cacheDirectory": "/tmp/cache",
 				"DATADIR": "/tmp",
-				"IGNORE_CACHE": "false"
+				"IGNORE_CACHE": "true"
 			},
             "console": "internalConsole",			          
 			"sourceMaps": false,
