--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,8 +21,8 @@
 				"DEV_MODE": "true",
 				"USE_MOCK": "true",
 				"CPU_MOCK": "123MOCK",
-				"GEO_MOCK": "true",
-				"MJPG_MOCK": "false",
+				"GEO_MOCK": "false",
+				"MJPG_MOCK": "true",
 				"DEBUG": "bridge, mcu, cpu, *:Notifications",
 				"port": 8080,
 				"configfile": "/tmp/rovconfig.json",
@@ -30,7 +30,8 @@
 				"pluginsDownloadDirectory": "/tmp/plugins",
 				"cacheDirectory": "/tmp/cache",
 				"DATADIR": "/tmp",
-				"IGNORE_CACHE": "true"
+				"IGNORE_CACHE": "true",
+				"COCKPIT_PATH": "${workspaceRoot}"
 			},
             "console": "internalConsole",			          
 			"sourceMaps": false,
