--- a/src/plugins/mjpeg-video/supervisor/package.json
+++ b/src/plugins/mjpeg-video/supervisor/package.json
@@ -9,17 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^1.0.0",
     "child-process-promise": "^2.0.2",
     "debug": "^2.2.0",
+    "eventemitter3": "^2.0.2",
     "express": "^4.13.4",
     "fast-pool": "^0.9.0",
     "glob": "^6.0.4",
-    "bluebird": "^1.0.0",
     "respawn": "^1.0.0",
     "socket.io": "^1.4.5",
     "yargs": "^4.7.1"
   }
 }
-
-
-  
