Added support for running in mock. mock with hardware, or actual mode

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,8 +22,9 @@
 				"USE_MOCK": "true",
 				"CPU_MOCK": "123MOCK",
 				"GEO_MOCK": "false",
-				"MJPG_MOCK": "true",
-				"DEBUG": "bridge, mcu, cpu, *:Notifications",
+				"MOCK_VIDEO_TYPE": "MJPEG",
+				"MOCK_VIDEO_HARDWARE": "false",
+				"DEBUG": "bridge, mcu, cpu, *:Notifications, app:mjpeg*",
 				"port": 8080,
 				"configfile": "/tmp/rovconfig.json",
 				"plugins__ui-manager__selectedUI": "new-ui",
