Added logic for choosing between mock mjpeg or mock geo

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,9 +21,8 @@
 				"DEV_MODE": "true",
 				"USE_MOCK": "true",
 				"CPU_MOCK": "123MOCK",
-				"GEO_MOCK": "false",
 				"MOCK_VIDEO_TYPE": "MJPEG",
-				"MOCK_VIDEO_HARDWARE": "false",
+				"MOCK_VIDEO_HARDWARE": "true",
 				"DEBUG": "bridge, mcu, cpu, *:Notifications, app:mjpeg*",
 				"port": 8080,
 				"configfile": "/tmp/rovconfig.json",
