--- a/src/plugins/mjpeg-video/package.json
+++ b/src/plugins/mjpeg-video/package.json
@@ -9,6 +9,6 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "mjpeg-video-server": "git+https://github.com/OpenROV-Dev/mjpeg-video-server.git"
+    "mjpeg-video-server": "git://github.com/OpenROV-Dev/mjpeg-video-server.git#feature\/websockets"
   }
 }
