Feature/websocket mjpeg (#158)
* Reworked Video and Mjpeg-video plugins. Added objectpool helper class

* Created new version of mjpeg video server as supervisor application. WIP

* Nominally working now: Scan, create, start, cleanup

* Added Registation. Cleaned up camera creation process a bit.

* Modified mjpeg-packet-video to directly accept blobs on append

* Fixed socketio wspath for mjpeg-video supervisor

* Added support for wss connection

* Formatting

* Lambda use to cleanup self/this and limit to 1 camera

* Added support for ws and wss video protocols

* Fixed wss/ws typo

* Added connection type info and cleaned up registration process

* Added better handling of both ws and wss

* Added support for running in mock. mock with hardware, or actual mode

* Added cockpit source path variable to node env

* Redirected mjpeg plugin back to separate node module mjpeg-video-server

* Fixed up settings changes for mjpeg cameras

* Cleaned up settings across a few plugins, added categories and titles

* Added mjpeg applet with Scan button to allow user to attempt to scan for new cameras

* Fixed object pool creating more resources than intended

* Added logic for choosing between mock mjpeg or mock geo

* Removed knightrider.js and replaced with new c++ program

* Pointed to websocket branch of mjpegvideoserver

* Fixed order of checking for http vs https

* Decreased priority of mjpeg supervisor by 1, since it is running non-critical functions now

* Pointed back to master branch

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,9 +21,9 @@
 				"DEV_MODE": "true",
 				"USE_MOCK": "true",
 				"CPU_MOCK": "123MOCK",
-				"GEO_MOCK": "true",
-				"MJPG_MOCK": "false",
-				"DEBUG": "bridge, mcu, cpu, *:Notifications",
+				"MOCK_VIDEO_TYPE": "MJPEG",
+				"MOCK_VIDEO_HARDWARE": "true",
+				"DEBUG": "bridge, mcu, cpu, *:Notifications, app:mjpeg*",
 				"port": 8080,
 				"configfile": "/tmp/rovconfig.json",
 				"plugins__ui-manager__selectedUI": "new-ui",
