--- a/src/system-plugins/ui-manager/public/bower.json
+++ b/src/system-plugins/ui-manager/public/bower.json
@@ -21,7 +21,9 @@
     "platinum-sw": "PolymerElements/platinum-sw#^1.3.0",
     "app-route": "PolymerElements/app-route#^0.9.1",
     "polymer": "1.6.1",
-    "webcomponentsjs": "^0.7.20"
+    "webcomponentsjs": "^0.7.20",
+    "paper-dialog-scrollable": "PolymerElements/paper-dialog-scrollable#^1.1.5",
+    "neon-animation": "PolymerElements/neon-animation#^1.2.4"
   },
   "devDependencies": {
     "web-component-tester": "^4.3.4",
