Added build:dev target

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "deploy:dev": "env 'npm_config_unsafe_perm=false' env 'npm_config_shrinkwrap=false' NODE_ENV=development npm install",
     "deploy:prod": "env 'npm_config_unsafe_perm=true' env 'npm_config_shrinkwrap=true' NODE_ENV=production npm install",
+    "build:dev": "env 'npm_config_unsafe_perm=true' env 'npm_config_shrinkwrap=false' NODE_ENV=production npm install",    
     "test": "./node_modules/grunt-cli/bin/grunt test",
     "shrinkwrap": "NODE_ENV=production node install_lib/npm_shrinkwrap_all.js",
     "install": "node install_lib/bower_install_all.js && node install_lib/npm_install_all.js"
