Rev9 board should be ready to go now. Added all required scripts

--- a/src/system-plugins/platform-manager/platforms/raspberrypi/boards/rev9/install/manifest.json
+++ b/src/system-plugins/platform-manager/platforms/raspberrypi/boards/rev9/install/manifest.json
@@ -1,9 +1,7 @@
 {
 	"files":
 	[
-		{ "src": "BuildFirmware.js", 	"dest": "/opt/openrov/system/scripts" },
-		{ "src": "FlashFirmware.js", 	"dest": "/opt/openrov/system/scripts" },
-		{ "src": "ResetMCU.sh", 		"dest": "/opt/openrov/system/scripts" }
+		{ "src": "FlashFirmware.js", 	"dest": "/opt/openrov/system/scripts" }
 	],
 	
 	"preinstall": 
