--- a/src/system-plugins/platform-manager/platforms/raspberrypi/boards/rev10/install/manifest.json
+++ b/src/system-plugins/platform-manager/platforms/raspberrypi/boards/rev10/install/manifest.json
@@ -1,9 +1,16 @@
 {
 	"files":
 	[
-		{ "src": "BuildFirmware.js", 	"dest": "/opt/openrov/system/scripts" },
-		{ "src": "FlashFirmware.js", 	"dest": "/opt/openrov/system/scripts" },
-		{ "src": "ResetMCU.sh", 		"dest": "/opt/openrov/system/scripts" }
+		{ "src": "flashEEPROM.js", 	"dest": "/opt/openrov/system/scripts" },
+		{ "src": "buildSAMD.sh", 	"dest": "/opt/openrov/system/scripts" },
+		{ "src": "flashSAMD.sh", 	"dest": "/opt/openrov/system/scripts" },
+		{ "src": "resetSAMD.sh", 	"dest": "/opt/openrov/system/scripts" },
+		{ "src": "debugSAMD.sh", 	"dest": "/opt/openrov/system/scripts" },
+		{ "src": "selectSAMD.sh", 	"dest": "/opt/openrov/system/scripts" },
+		{ "src": "selectESCA.sh", 	"dest": "/opt/openrov/system/scripts" },
+		{ "src": "selectESCB.sh", 	"dest": "/opt/openrov/system/scripts" },
+		{ "src": "selectESCC.sh", 	"dest": "/opt/openrov/system/scripts" },
+		{ "src": "flashESCS.sh", 	"dest": "/opt/openrov/system/scripts" }
 	],
 	
 	"preinstall": 
