Fixed openocd flashing config files to use the correct chip. Fixed typos in rev9 scripts

--- a/src/system-plugins/platform-manager/platforms/raspberrypi/boards/rev10/install/manifest.json
+++ b/src/system-plugins/platform-manager/platforms/raspberrypi/boards/rev10/install/manifest.json
@@ -10,7 +10,8 @@
 		{ "src": "selectESCA.sh", 	"dest": "/opt/openrov/system/scripts" },
 		{ "src": "selectESCB.sh", 	"dest": "/opt/openrov/system/scripts" },
 		{ "src": "selectESCC.sh", 	"dest": "/opt/openrov/system/scripts" },
-		{ "src": "flashESCS.sh", 	"dest": "/opt/openrov/system/scripts" }
+		{ "src": "flashESCS.sh", 	"dest": "/opt/openrov/system/scripts" },
+		{ "src": "openocd-samd.cfg","dest": "/opt/openrov/system/etc" }
 	],
 	
 	"preinstall": 
