--- a/src/system-plugins/platform-manager/platforms/raspberrypi/boards/rev9/install/manifest.json
+++ b/src/system-plugins/platform-manager/platforms/raspberrypi/boards/rev9/install/manifest.json
@@ -5,7 +5,8 @@
 		{ "src": "buildSAMD.sh", 	"dest": "/opt/openrov/system/scripts" },
 		{ "src": "flashSAMD.sh", 	"dest": "/opt/openrov/system/scripts" },
 		{ "src": "resetSAMD.sh", 	"dest": "/opt/openrov/system/scripts" },
-		{ "src": "debugSAMD.sh", 	"dest": "/opt/openrov/system/scripts" }
+		{ "src": "debugSAMD.sh", 	"dest": "/opt/openrov/system/scripts" },
+		{ "src": "openocd-samd.cfg","dest": "/opt/openrov/system/etc" }
 	],
 	
 	"preinstall": 
