Fixed install manifests for rpi boards

--- a/src/system-plugins/platform-manager/platforms/raspberrypi/boards/rev10/install/manifest.json
+++ b/src/system-plugins/platform-manager/platforms/raspberrypi/boards/rev10/install/manifest.json
@@ -11,7 +11,7 @@
 		{ "src": "selectESCB.sh", 	"dest": "/opt/openrov/system/scripts" },
 		{ "src": "selectESCC.sh", 	"dest": "/opt/openrov/system/scripts" },
 		{ "src": "flashESCS.sh", 	"dest": "/opt/openrov/system/scripts" },
-		{ "src": "openocd-samd.cfg","dest": "/opt/openrov/system/etc" }
+		{ "src": "openocd_samd.cfg","dest": "/opt/openrov/system/etc" }
 	],
 	
 	"preinstall": 
