--- a/src/system-plugins/platform-manager/platforms/raspberrypi/boards/rev8/install/manifest.json
+++ b/src/system-plugins/platform-manager/platforms/raspberrypi/boards/rev8/install/manifest.json
@@ -6,7 +6,7 @@
 		{ "src": "flashSAMD.sh", 	"dest": "/opt/openrov/system/scripts" },
 		{ "src": "resetSAMD.sh", 	"dest": "/opt/openrov/system/scripts" },
 		{ "src": "debugSAMD.sh", 	"dest": "/opt/openrov/system/scripts" },
-		{ "src": "openocd-samd.cfg","dest": "/opt/openrov/system/etc" }
+		{ "src": "openocd_samd.cfg","dest": "/opt/openrov/system/etc" }
 	],
 	
 	"preinstall": 
