--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "optimist": "",
     "os-utils": "",
     "pino": "^3.0.5",
+    "pino-trace": "^0.1.0",
     "q": "^1.4.1",
     "request": "^2.69.0",
     "respawn": "^2.3.0",
