added app layout dependency

--- a/src/system-plugins/settings-manager/public/bower.json
+++ b/src/system-plugins/settings-manager/public/bower.json
@@ -15,6 +15,7 @@
     "tests"
   ],
   "dependencies": {
+    "app-layout": "PolymerElements/app-layout#^0.10.0",
     "json-editor": "https://github.com/BrianAdams/json-editor.git#patched",
     "paper-toast": "PolymerElements/paper-toast#^1.2.2",
     "webcomponentsjs": "^0.7.20",
