--- a/src/plugins/video/shrinkwrap.yaml
+++ b/src/plugins/video/shrinkwrap.yaml
@@ -1,78 +1,65 @@
 dependencies:
-  socket.io-client: registry.npmjs.org/socket.io-client/1.7.3
-  socket.io-stream: registry.npmjs.org/socket.io-stream/0.9.1
+  socket.io-client@^1.4.8: registry.npmjs.org/socket.io-client/1.7.3
+  socket.io-stream@^0.9.0: registry.npmjs.org/socket.io-stream/0.9.1
 packages:
   registry.npmjs.org/after/0.8.2:
     resolution:
       shasum: fedb394f9f0e02aa9768e702bda23b505fae7e1f
       tarball: 'https://registry.npmjs.org/after/-/after-0.8.2.tgz'
-      type: tarball
   registry.npmjs.org/arraybuffer.slice/0.0.6:
     resolution:
       shasum: f33b2159f0532a3f3107a272c0ccfbd1ad2979ca
       tarball: 'https://registry.npmjs.org/arraybuffer.slice/-/arraybuffer.slice-0.0.6.tgz'
-      type: tarball
   registry.npmjs.org/backo2/1.0.2:
     resolution:
       shasum: 31ab1ac8b129363463e35b3ebb69f4dfcfba7947
       tarball: 'https://registry.npmjs.org/backo2/-/backo2-1.0.2.tgz'
-      type: tarball
   registry.npmjs.org/base64-arraybuffer/0.1.5:
     resolution:
       shasum: 73926771923b5a19747ad666aa5cd4bf9c6e9ce8
       tarball: 'https://registry.npmjs.org/base64-arraybuffer/-/base64-arraybuffer-0.1.5.tgz'
-      type: tarball
   registry.npmjs.org/better-assert/1.0.2:
     dependencies:
       callsite: registry.npmjs.org/callsite/1.0.0
     resolution:
       shasum: 40866b9e1b9e0b55b481894311e68faffaebc522
       tarball: 'https://registry.npmjs.org/better-assert/-/better-assert-1.0.2.tgz'
-      type: tarball
   registry.npmjs.org/blob/0.0.4:
     resolution:
       shasum: bcf13052ca54463f30f9fc7e95b9a47630a94921
       tarball: 'https://registry.npmjs.org/blob/-/blob-0.0.4.tgz'
-      type: tarball
   registry.npmjs.org/callsite/1.0.0:
     resolution:
       shasum: 280398e5d664bd74038b6f0905153e6e8af1bc20
       tarball: 'https://registry.npmjs.org/callsite/-/callsite-1.0.0.tgz'
-      type: tarball
   registry.npmjs.org/component-bind/1.0.0:
     resolution:
       shasum: 00c608ab7dcd93897c0009651b1d3a8e1e73bbd1
       tarball: 'https://registry.npmjs.org/component-bind/-/component-bind-1.0.0.tgz'
-      type: tarball
   registry.npmjs.org/component-emitter/1.1.2:
     resolution:
       shasum: 296594f2753daa63996d2af08d15a95116c9aec3
       tarball: 'https://registry.npmjs.org/component-emitter/-/component-emitter-1.1.2.tgz'
-      type: tarball
   registry.npmjs.org/component-emitter/1.2.1:
     resolution:
       shasum: 137918d6d78283f7df7a6b7c5a63e140e69425e6
       tarball: 'https://registry.npmjs.org/component-emitter/-/component-emitter-1.2.1.tgz'
-      type: tarball
   registry.npmjs.org/component-inherit/0.0.3:
     resolution:
       shasum: 645fc4adf58b72b649d5cae65135619db26ff143
       tarball: 'https://registry.npmjs.org/component-inherit/-/component-inherit-0.0.3.tgz'
-      type: tarball
   registry.npmjs.org/debug/2.2.0:
     dependencies:
       ms: registry.npmjs.org/ms/0.7.1
     resolution:
       shasum: f87057e995b1a1f6ae6a4960664137bc56f039da
       tarball: 'https://registry.npmjs.org/debug/-/debug-2.2.0.tgz'
-      type: tarball
   registry.npmjs.org/debug/2.3.3:
     dependencies:
       ms: registry.npmjs.org/ms/0.7.2
     resolution:
       shasum: 40c453e67e6e13c901ddec317af8986cda9eff8c
       tarball: 'https://registry.npmjs.org/debug/-/debug-2.3.3.tgz'
-      type: tarball
   registry.npmjs.org/engine.io-client/1.8.3:
     dependencies:
       component-emitter: registry.npmjs.org/component-emitter/1.2.1
@@ -90,7 +77,6 @@ packages:
     resolution:
       shasum: 1798ed93451246453d4c6f635d7a201fe940d5ab
       tarball: 'https://registry.npmjs.org/engine.io-client/-/engine.io-client-1.8.3.tgz'
-      type: tarball
   registry.npmjs.org/engine.io-parser/1.3.2:
     dependencies:
       after: registry.npmjs.org/after/0.8.2
@@ -102,75 +88,62 @@ packages:
     resolution:
       shasum: 937b079f0007d0893ec56d46cb220b8cb435220a
       tarball: 'https://registry.npmjs.org/engine.io-parser/-/engine.io-parser-1.3.2.tgz'
-      type: tarball
   registry.npmjs.org/has-binary/0.1.7:
     dependencies:
       isarray: registry.npmjs.org/isarray/0.0.1
     resolution:
       shasum: 68e61eb16210c9545a0a5cce06a873912fe1e68c
       tarball: 'https://registry.npmjs.org/has-binary/-/has-binary-0.1.7.tgz'
-      type: tarball
   registry.npmjs.org/has-cors/1.1.0:
     resolution:
       shasum: 5e474793f7ea9843d1bb99c23eef49ff126fff39
       tarball: 'https://registry.npmjs.org/has-cors/-/has-cors-1.1.0.tgz'
-      type: tarball
   registry.npmjs.org/indexof/0.0.1:
     resolution:
       shasum: 82dc336d232b9062179d05ab3293a66059fd435d
       tarball: 'https://registry.npmjs.org/indexof/-/indexof-0.0.1.tgz'
-      type: tarball
   registry.npmjs.org/isarray/0.0.1:
     resolution:
       shasum: 8a18acfca9a8f4177e09abfc6038939b05d1eedf
       tarball: 'https://registry.npmjs.org/isarray/-/isarray-0.0.1.tgz'
-      type: tarball
   registry.npmjs.org/json3/3.3.2:
     resolution:
       shasum: 3c0434743df93e2f5c42aee7b19bcb483575f4e1
       tarball: 'https://registry.npmjs.org/json3/-/json3-3.3.2.tgz'
-      type: tarball
   registry.npmjs.org/ms/0.7.1:
     resolution:
       shasum: 9cd13c03adbff25b65effde7ce864ee952017098
       tarball: 'https://registry.npmjs.org/ms/-/ms-0.7.1.tgz'
-      type: tarball
   registry.npmjs.org/ms/0.7.2:
     resolution:
       shasum: ae25cf2512b3885a1d95d7f037868d8431124765
       tarball: 'https://registry.npmjs.org/ms/-/ms-0.7.2.tgz'
-      type: tarball
   registry.npmjs.org/object-component/0.0.3:
     resolution:
       shasum: f0c69aa50efc95b866c186f400a33769cb2f1291
       tarball: 'https://registry.npmjs.org/object-component/-/object-component-0.0.3.tgz'
-      type: tarball
   registry.npmjs.org/options/0.0.6:
     resolution:
       shasum: ec22d312806bb53e731773e7cdaefcf1c643128f
       tarball: 'https://registry.npmjs.org/options/-/options-0.0.6.tgz'
-      type: tarball
   registry.npmjs.org/parsejson/0.0.3:
     dependencies:
       better-assert: registry.npmjs.org/better-assert/1.0.2
     resolution:
       shasum: ab7e3759f209ece99437973f7d0f1f64ae0e64ab
       tarball: 'https://registry.npmjs.org/parsejson/-/parsejson-0.0.3.tgz'
-      type: tarball
   registry.npmjs.org/parseqs/0.0.5:
     dependencies:
       better-assert: registry.npmjs.org/better-assert/1.0.2
     resolution:
       shasum: d5208a3738e46766e291ba2ea173684921a8b89d
       tarball: 'https://registry.npmjs.org/parseqs/-/parseqs-0.0.5.tgz'
-      type: tarball
   registry.npmjs.org/parseuri/0.0.5:
     dependencies:
       better-assert: registry.npmjs.org/better-assert/1.0.2
     resolution:
       shasum: 80204a50d4dbb779bfdc6ebe2778d90e4bce320a
       tarball: 'https://registry.npmjs.org/parseuri/-/parseuri-0.0.5.tgz'
-      type: tarball
   registry.npmjs.org/socket.io-client/1.7.3:
     dependencies:
       backo2: registry.npmjs.org/backo2/1.0.2
@@ -187,7 +160,6 @@ packages:
     resolution:
       shasum: b30e86aa10d5ef3546601c09cde4765e381da377
       tarball: 'https://registry.npmjs.org/socket.io-client/-/socket.io-client-1.7.3.tgz'
-      type: tarball
   registry.npmjs.org/socket.io-parser/2.3.1:
     dependencies:
       component-emitter: registry.npmjs.org/component-emitter/1.1.2
@@ -197,7 +169,6 @@ packages:
     resolution:
       shasum: dd532025103ce429697326befd64005fcfe5b4a0
       tarball: 'https://registry.npmjs.org/socket.io-parser/-/socket.io-parser-2.3.1.tgz'
-      type: tarball
   registry.npmjs.org/socket.io-stream/0.9.1:
     dependencies:
       component-bind: registry.npmjs.org/component-bind/1.0.0
@@ -205,17 +176,14 @@ packages:
     resolution:
       shasum: 421258316288b83ac693b0d43efd09d6d43aba97
       tarball: 'https://registry.npmjs.org/socket.io-stream/-/socket.io-stream-0.9.1.tgz'
-      type: tarball
   registry.npmjs.org/to-array/0.1.4:
     resolution:
       shasum: 17e6c11f73dd4f3d74cda7a4ff3238e9ad9bf890
       tarball: 'https://registry.npmjs.org/to-array/-/to-array-0.1.4.tgz'
-      type: tarball
   registry.npmjs.org/ultron/1.0.2:
     resolution:
       shasum: ace116ab557cd197386a4e88f4685378c8b2e4fa
       tarball: 'https://registry.npmjs.org/ultron/-/ultron-1.0.2.tgz'
-      type: tarball
   registry.npmjs.org/ws/1.1.2:
     dependencies:
       options: registry.npmjs.org/options/0.0.6
@@ -223,20 +191,16 @@ packages:
     resolution:
       shasum: 8a244fa052401e08c9886cf44a85189e1fd4067f
       tarball: 'https://registry.npmjs.org/ws/-/ws-1.1.2.tgz'
-      type: tarball
   registry.npmjs.org/wtf-8/1.0.0:
     resolution:
       shasum: 392d8ba2d0f1c34d1ee2d630f15d0efb68e1048a
       tarball: 'https://registry.npmjs.org/wtf-8/-/wtf-8-1.0.0.tgz'
-      type: tarball
   registry.npmjs.org/xmlhttprequest-ssl/1.5.3:
     resolution:
       shasum: 185a888c04eca46c3e4070d99f7b49de3528992d
       tarball: 'https://registry.npmjs.org/xmlhttprequest-ssl/-/xmlhttprequest-ssl-1.5.3.tgz'
-      type: tarball
   registry.npmjs.org/yeast/0.1.2:
     resolution:
       shasum: 008e06d8094320c372dbc2f8ed76a0ca6c8ac419
       tarball: 'https://registry.npmjs.org/yeast/-/yeast-0.1.2.tgz'
-      type: tarball
-version: 0
+version: 1
